--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/material-top-tabs": "^7.0.3",
+    "@react-navigation/native": "^7.0.2",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "expo": "~51.0.39",
     "expo-auth-session": "~5.5.2",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
@@ -50,7 +52,7 @@
     "tailwindcss": "^3.4.14",
     "zod": "^3.23.8",
     "zustand": "^5.0.1",
-    "expo-blur": "~13.0.2"
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
