--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 EXPO_PUBLIC_ANDROID_CLIENT_ID='59486777240-20smorgil86cqfmrljt0o58o2fo15j4q.apps.googleusercontent.com'
 EXPO_PUBLIC_IOS_CLIENT_ID='59486777240-vh0rlm82dp9bidlftlan6tb3976fuuv1.apps.googleusercontent.com'
 EXPO_PUBLIC_WEB_CLIENT_ID='59486777240-scueieiqd270258k80r7rah5ie17316j.apps.googleusercontent.com'
-
+EXPO_NO_GIT_STATUS=1
 EXPO_PUBLIC_API_URL='http://localhost:3000'
