--- a/package.json
+++ b/package.json
@@ -17,53 +17,58 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
     "@react-navigation/material-top-tabs": "^7.0.3",
     "@react-navigation/native": "^7.0.2",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "@tanstack/react-query": "^5.61.4",
+    "@tanstack/react-query-devtools": "^5.61.4",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
-    "expo": "~51.0.39",
-    "expo-auth-session": "~5.5.2",
-    "expo-blur": "~13.0.2",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-image": "~1.13.0",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.24",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.11",
+    "expo-auth-session": "~6.0.0",
+    "expo-blur": "~14.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.4",
+    "expo-font": "~13.0.1",
+    "expo-image": "~2.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "~0.29.13",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.4",
+    "expo-web-browser": "~14.0.1",
     "moti": "^0.29.0",
     "nativewind": "^4.1.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "^2.12.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.1.0",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "zod": "^3.23.8",
-    "zustand": "^5.0.1",
-    "react-native-pager-view": "6.3.0",
-    "expo-dev-client": "~4.0.29"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/lodash": "^4.17.13",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
